--- a/styles.css
+++ b/styles.css
@@ -445,12 +445,33 @@ h3{
             display: flex;
             flex-direction: column;
             gap: 30px;
+            height: auto;
         }
 
         .bento-item{
             padding: 30px;
-            background-color: var(--base);
+            background-color: var(--base-100);
             border-radius: 15px;
+            position: relative;
+            overflow: hidden;
+            img{
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                object-fit: cover;
+                transition: ease 2s all;    
+            }
+
+            &:hover{
+                img{
+                    transform: scale(1.2);
+                }   
+            }
+
+            @media(max-width: 768px){
+                height: 240px;
+            }
 
             &:nth-child(1){
                 grid-column: span 2;
@@ -505,3 +526,4 @@ h3{
         }
     }
 }
+
