--- a/portfolio-website/app/globals.css
+++ b/portfolio-website/app/globals.css
@@ -630,6 +630,8 @@ h3{
           }
           .message{
               background-color: var(--blue-100);
+              border-radius: 15px;
+              padding: 5px 10px;
           }
       }
   }
