--- a/styles.css
+++ b/styles.css
@@ -628,6 +628,8 @@ h3{
             }
             .message{
                 background-color: var(--blue-100);
+                border-radius: 15px;
+                padding: 5px 10px;
             }
         }
     }
